Fixed the dropdowns non-clickable on the bar-chart, Cutting off issue of the lable on the y-axis was fixed

--- a/app/public/stylesheets/module/sort-bar.css
+++ b/app/public/stylesheets/module/sort-bar.css
@@ -226,6 +226,7 @@
 	.sort-bar-right.pull-right {
 		float: none !important;
 		position: relative;
+		pointer-events: none;
 	}
 
 	.sort-control {
@@ -244,6 +245,7 @@
 
 	.sort-bar-right .sort-control {
 		display: inline-block;
+		pointer-events: all;
 	}
 
 	.sort-control > a {
@@ -254,6 +256,7 @@
 		position: absolute;
 		right: 0;
 		top: 0;
+		pointer-events: all;
 	}
 }
 
